update delete transaction (#93)
* Bit Bucket is down. What should I do now?

* It was the best of times, it was the worst of times

* Too lazy to write descriptive message

* hey, what's that over there?!

* asdfasdfasdfasdfasdfasdfadsf

* I'm too foo for this bar

* More ignore

* Who Let the Bugs Out??

* move your body every every body

* Never before had a small typo like this one caused so much damage.

* Merge pull request #67 from Lazersmoke/fix-andys-shit Fix andys shit

* just trolling the repo

* someday I gonna kill someone for this shit...

* I think now it works

* We know the game and we're gonna play it

* include shit

* debug suff

* The same thing we do every night, Pinky - try to take over the world!

* Hide those navs, boi!

* It's Working!

* This should work until december 2013.

* Never gonna run around and desert you

* I __ a word

* Not sure why

* This is the last time we let Jan commit ascii porn in the comments.

* This branch is so dirty, even your mom can't clean it.

* yo recipes

* A full commitment's what I'm thinking of

* Fucking egotistical bastard. adds expandtab to vimrc
