# domain/src/main/java/fr/bankwiz/server/domain/api/TransactionApi.java
@@ -4,10 +4,15 @@ import java.util.UUID;
 
 import fr.bankwiz.server.domain.model.data.Transaction;
 import fr.bankwiz.server.domain.model.input.TransactionCreationInput;
+import fr.bankwiz.server.domain.model.input.UpdateTransactionInput;
 import fr.bankwiz.server.domain.model.other.BankAccountTransactions;
 
 public interface TransactionApi {
     Transaction createTransaction(TransactionCreationInput transactionCreationInput);
 
     BankAccountTransactions getAllTransactionOfBankAccount(UUID bankaccountId);
+
+    Transaction updateTransaction(UUID bankaccountId, UpdateTransactionInput updateTransactionInput);
+
+    void deleteTransaction(UUID bankaccountId);
 }
