# infrastructure/src/main/java/fr/bankwiz/server/infrastructure/api/controller/TransactionController.java
@@ -10,8 +10,10 @@ import fr.bankwiz.openapi.api.TransactionApi;
 import fr.bankwiz.openapi.model.BankAccountTransactionsDTO;
 import fr.bankwiz.openapi.model.CreateTransactionRequest;
 import fr.bankwiz.openapi.model.TransactionDTO;
+import fr.bankwiz.openapi.model.UpdateTransactionRequest;
 import fr.bankwiz.server.domain.model.data.Transaction;
 import fr.bankwiz.server.domain.model.input.TransactionCreationInput;
+import fr.bankwiz.server.domain.model.input.UpdateTransactionInput;
 import fr.bankwiz.server.domain.model.other.BankAccountTransactions;
 import fr.bankwiz.server.infrastructure.service.TransactionInfraService;
 import fr.bankwiz.server.infrastructure.transformer.BankAccountTransactionsTransformer;
@@ -45,5 +47,24 @@ public class TransactionController implements TransactionApi {
         final BankAccountTransactionsDTO bankAccountTransactionsDTO =
                 BankAccountTransactionsTransformer.toBankAccountTransactionDTO(bankAccountTransactions);
         return new ResponseEntity<>(bankAccountTransactionsDTO, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<TransactionDTO> updateTransaction(
+            UUID transactionId, UpdateTransactionRequest updateTransactionRequest) {
+        final UpdateTransactionInput updateTransactionInput = UpdateTransactionInput.builder()
+                .decimalAmount(updateTransactionRequest.getDecimalAmount())
+                .comment(updateTransactionRequest.getComment())
+                .build();
+        final Transaction transaction =
+                this.transactionInfraService.updateTransaction(transactionId, updateTransactionInput);
+        final TransactionDTO transactionDTO = TransactionTransformer.toTransactionDTO(transaction);
+        return new ResponseEntity<>(transactionDTO, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteTransaction(UUID transactionId) {
+        this.transactionInfraService.deleteTransaction(transactionId);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 }
