# infrastructure/src/main/java/fr/bankwiz/server/infrastructure/service/TransactionInfraService.java
@@ -8,6 +8,7 @@ import org.springframework.transaction.annotation.Transactional;
 import fr.bankwiz.server.domain.api.TransactionApi;
 import fr.bankwiz.server.domain.model.data.Transaction;
 import fr.bankwiz.server.domain.model.input.TransactionCreationInput;
+import fr.bankwiz.server.domain.model.input.UpdateTransactionInput;
 import fr.bankwiz.server.domain.model.other.BankAccountTransactions;
 
 @Service
@@ -27,5 +28,15 @@ public class TransactionInfraService implements TransactionApi {
     @Transactional(readOnly = true)
     public BankAccountTransactions getAllTransactionOfBankAccount(UUID bankaccountId) {
         return this.transactionApi.getAllTransactionOfBankAccount(bankaccountId);
+    }
+
+    @Transactional
+    public Transaction updateTransaction(UUID bankaccountId, UpdateTransactionInput updateTransactionInput) {
+        return this.transactionApi.updateTransaction(bankaccountId, updateTransactionInput);
+    }
+
+    @Transactional
+    public void deleteTransaction(UUID bankaccountId) {
+        this.transactionApi.deleteTransaction(bankaccountId);
     }
 }
